# project-geld

./: .env.example  .gitignore  BROAD_UNIVERSE_RESEARCH.md  DAILY_REVIEW.md  DUAL_ACCOUNT_PAPER.md  INTRADAY_RESEARCH.md  INTRADAY_V12_PIT_VALIDATION.md  INTRADAY_V12_STRESS.md  INTRADAY_V13_RESEARCH.md  INTRADAY_V14_RESEARCH.md  INTRADAY_V15_RESEARCH.md  INTRADAY_V7_V9_RESEARCH.md  LONG_INTRADAY_RESEARCH.md  MOMENTUM_V3_RESEARCH.md  MOMENTUM_V4_RESEARCH.md  PAPER_DAILY_V4.md  PAPER_INTRADAY_V15.md  README.md  RESEARCH_REPORT.md  VERSIONED_RESEARCH.md  config.example.toml  pyproject.toml
configs/: equity-momentum-v2.toml  equity-momentum-v3.toml  equity-momentum-v4.toml  paper-daily-v4.toml  paper-intra-v1.toml  paper-intra-v13.toml  paper-intra-v15.toml  paper-intraday.toml  paper-swing-v4.toml  research-daily-v5.toml  research-intra-v10-broad.toml  research-intra-v11-broad.toml  research-intra-v12-broad.toml  research-intra-v13-pit-sip.toml  research-intra-v14-pit.toml  research-intra-v2.toml  research-intra-v3.toml  research-intra-v4.toml  research-intra-v5.toml  research-intra-v6-broad.toml  research-intra-v6.toml  research-intra-v7-broad.toml  research-intra-v7.toml  research-intra-v8-broad.toml  research-intra-v8.toml  research-intra-v9-broad.toml  sector-etfs.toml
research-results/: intraday-v12-pit-summary.json  intraday-v13-summary.json
scripts/: audit_forced_exits.py  backtest_daily_v4_crsp.py  backtest_daily_v4_yahoo_pit.py  broad_diversification_stress.py  broad_exit_stress.py  broad_fixed_validation.py  broad_universe_research.py  broad_v3_research.py  (+29 more)
(+69 files in other folders)
