[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-geld"
version = "0.1.0"
description = "Research, backtest, and Alpaca paper-trading engine for US equities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
alpaca = ["alpaca-py>=0.30,<1"]
dev = ["pytest>=8,<10"]

[project.scripts]
geld = "project_geld.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
